@@ -24,11 +24,8 @@
 
 .logo {
     display: block;
-    text-align: left;
-    text-decoration: none;
     color: #aaa;
     padding: 0.9em 1.2em;
-    margin: 0;
     -webkit-font-smoothing: auto;
 }
 
